--- a/app/src/main/res/layout/activity_real_time.xml
+++ b/app/src/main/res/layout/activity_real_time.xml
@@ -142,6 +142,19 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="9dp"
+                android:layout_marginBottom="7dp"
+                android:clickable="true"
+                android:backgroundTint="#A88080"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="gone"
+                app:srcCompat="@drawable/gps_15949717" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
